# RP2040-Moving-Average

./: CMakeLists.txt  README.md  moving_average.c  moving_average.h
